--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -33,7 +33,13 @@
     "fontSize": "字体大小",
     "lineHeight": "行高",
     "readingMode": "阅读模式",
-    "exitReadingMode": "退出阅读模式"
+    "exitReadingMode": "退出阅读模式",
+    "firstTimeHint": {
+      "title": "💡 使用提示",
+      "fullscreen": "按 F11 进入全屏阅读模式",
+      "aiExplain": "选中文字后可使用 AI 释义功能",
+      "gotIt": "知道了"
+    }
   },
   "notes": {
     "title": "笔记",
@@ -47,27 +53,72 @@
     "highlight": "高亮",
     "annotation": "批注",
     "bookmark": "书签",
-    "noNotes": "还没有笔记",
+    "noNotes": "暂无笔记",
     "createFirstNote": "创建您的第一条笔记",
     "trash": "回收站",
     "analytics": "统计",
     "restore": "恢复",
     "permanentDelete": "永久删除",
-    "emptyTrash": "清空回收站"
+    "emptyTrash": "清空回收站",
+    "advancedFilter": "高级筛选",
+    "timeRange": "时间范围",
+    "startDate": "开始日期",
+    "endDate": "结束日期",
+    "sortBy": "排序",
+    "createdAt": "创建时间",
+    "updatedAt": "更新时间",
+    "ascending": "升序",
+    "descending": "降序",
+    "clearFilters": "清除所有筛选",
+    "tagFilter": "标签筛选",
+    "createNewNote": "创建新笔记",
+    "selectNotePrompt": "选择一个笔记查看详情",
+    "noteDetail": "笔记详情",
+    "saving": "保存中...",
+    "saved": "已保存",
+    "saveFailed": "保存失败",
+    "save": "保存",
+    "cancel": "取消",
+    "edit": "编辑",
+    "delete": "删除",
+    "titleLabel": "标题",
+    "contentLabel": "内容",
+    "categoryLabel": "分类",
+    "tagsLabel": "标签",
+    "noCategory": "无分类",
+    "noContent": "无内容",
+    "quickJump": "快速跳转",
+    "jumpToChapter": "跳转到章节",
+    "locateInText": "在文中定位",
+    "titleRequired": "标题不能为空",
+    "updateFailed": "更新笔记失败",
+    "deleteFailed": "删除笔记失败",
+    "createdTime": "创建时间",
+    "updatedTime": "更新时间",
+    "concept": "概念",
+    "opinion": "观点",
+    "question": "疑问",
+    "action": "行动"
   },
   "ai": {
     "title": "AI 助手",
     "explain": "解释",
     "summarize": "总结",
     "translate": "翻译",
-    "askQuestion": "提出问题...",
+    "askQuestion": "输入问题...",
     "config": "AI 配置",
     "provider": "提供商",
     "apiKey": "API 密钥",
     "model": "模型",
     "temperature": "温度",
     "save": "保存",
-    "cancel": "取消"
+    "cancel": "取消",
+    "switchToChat": "切换到对话模式",
+    "switchToExplain": "切换到释义模式",
+    "selectTextPrompt": "请选中文字后点击 AI 释义按钮",
+    "welcomeMessage": "你好！我是你的阅读助手。你可以问我关于当前章节的任何问题。",
+    "explainError": "错误",
+    "chatError": "错误"
   },
   "settings": {
     "title": "设置",
@@ -79,7 +130,9 @@
     "darkMode": "夜间模式",
     "autoDetect": "自动检测",
     "save": "保存",
-    "cancel": "取消"
+    "cancel": "取消",
+    "aiConfigDescription": "配置 AI 助手的 API 密钥和参数，用于文本释义和章节对话功能。",
+    "themeToggleDescription": "使用右下角的主题切换按钮在日间和夜间模式之间切换。"
   },
   "theme": {
     "light": "日间",
