EPUB路径修复，多语言适配

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -34,11 +34,19 @@
     "lineHeight": "Line Height",
     "readingMode": "Reading Mode",
     "exitReadingMode": "Exit Reading Mode",
+    "viewNote": "View Note",
+    "underline": "Underline",
+    "annotationAdded": "{{type}} annotation added: \"{{text}}\"",
+    "noteCreatedSuccess": "Note created successfully",
+    "noteCreatedWithText": "Note created successfully: \"{{text}}\"",
+    "globalSettings": "Global Settings",
     "firstTimeHint": {
       "title": "💡 Tips",
       "fullscreen": "Press F11 to enter fullscreen reading mode",
       "aiExplain": "Select text to use AI explanation feature",
-      "gotIt": "Got it"
+      "gotIt": "Got it",
+      "fullscreenDesc": "Enjoy immersive reading experience",
+      "aiExplainDesc": "AI assistant helps you understand difficult points"
     }
   },
   "notes": {
@@ -98,7 +106,20 @@
     "concept": "Concept",
     "opinion": "Opinion",
     "question": "Question",
-    "action": "Action"
+    "action": "Action",
+    "trashEmpty": "Trash is empty",
+    "confirmRestore": "Are you sure you want to restore {{count}} selected note(s)?",
+    "confirmBatchDelete": "Are you sure you want to permanently delete {{count}} selected note(s)? This action cannot be undone.",
+    "restoreFailed": "Failed to restore",
+    "batchRestoreFailed": "Failed to batch restore",
+    "batchDeleteFailed": "Failed to batch delete",
+    "loadTrashFailed": "Failed to load trash",
+    "restoreNoteFailed": "Failed to restore note",
+    "permanentDeleteFailed": "Failed to permanently delete",
+    "selectedCount": "{{count}} item(s) selected",
+    "batchRestore": "Batch Restore",
+    "batchDelete": "Batch Delete",
+    "deletedAt": "Deleted at"
   },
   "ai": {
     "title": "AI Assistant",
@@ -118,7 +139,25 @@
     "selectTextPrompt": "Please select text and click the AI Explain button",
     "welcomeMessage": "Hello! I'm your reading assistant. You can ask me anything about the current chapter.",
     "explainError": "Error",
-    "chatError": "Error"
+    "chatError": "Error",
+    "explainFailed": "AI explanation failed",
+    "chatFailed": "AI chat failed",
+    "openaiCn": "OpenAI (China)",
+    "loadConfigFailed": "Failed to load AI configuration",
+    "loadConfigFailedAlert": "Failed to load configuration",
+    "apiKeyRequired": "Please enter API Key",
+    "apiKeyPlaceholder": "Enter API Key",
+    "saveConfigFailed": "Failed to save configuration",
+    "saving": "Saving...",
+    "configured": "Configured",
+    "notConfigured": "Not Configured",
+    "currentActive": "Currently Active",
+    "configure": "Configure",
+    "temperature": "Temperature",
+    "maxTokens": "Max Tokens",
+    "activateConfig": "Activate this configuration",
+    "explainFailed": "AI explanation failed",
+    "explainFailedTitle": "Explanation Failed"
   },
   "settings": {
     "title": "Settings",
@@ -147,7 +186,32 @@
     "readingUnits": "Reading Units",
     "scores": "Scores",
     "features": "Features",
-    "timeline": "Timeline"
+    "timeline": "Timeline",
+    "segmentDetail": "Segment Detail Panel",
+    "decisionResult": "Decision Result",
+    "merge": "Merge",
+    "createNew": "Create New Chapter",
+    "fallbackStrategy": "Fallback Strategy",
+    "scoreDetails": "Score Details",
+    "dimension": "Dimension",
+    "score": "Score",
+    "weight": "Weight",
+    "weighted": "Weighted",
+    "description": "Description",
+    "total": "TOTAL",
+    "tendToMerge": "Tend to Merge",
+    "tendToSplit": "Tend to Split",
+    "decisionExplanation": "Decision Explanation",
+    "contentType": "Content Type",
+    "loadDebugDataFailed": "Failed to load debug data",
+    "loadFailed": "Load Failed",
+    "ensureBookParsed": "Please ensure the book has been parsed",
+    "mergedReason": "This segment was merged mainly because:",
+    "splitReason": "This segment was created as a new chapter mainly because:",
+    "fallback": "Fallback",
+    "mergeLabel": "🟢 Merge",
+    "createNewLabel": "🔵 Create New",
+    "level": "Level"
   },
   "common": {
     "ok": "OK",
@@ -174,6 +238,30 @@
     "saveFailed": "Failed to save",
     "deleteFailed": "Failed to delete",
     "networkError": "Network error",
-    "unknownError": "Unknown error occurred"
+    "unknownError": "Unknown error occurred",
+    "importError": "Import error"
+  },
+  "analytics": {
+    "title": "Data Analytics",
+    "totalNotes": "Total Notes",
+    "todayCreated": "Created Today",
+    "weekCreated": "Created This Week",
+    "totalDuration": "Total Duration",
+    "categoryStats": "Category Statistics",
+    "noCategoryData": "No category data",
+    "uncategorized": "Uncategorized",
+    "popularTags": "Popular Tags",
+    "noTagData": "No tag data",
+    "averageStats": "Average Statistics",
+    "avgDailyCreated": "Avg. Daily Created",
+    "avgSessionDuration": "Avg. Session Duration",
+    "to": "to",
+    "clearFilter": "Clear Filter",
+    "noStatsData": "No statistics data",
+    "loadStatsFailed": "Failed to load statistics",
+    "seconds": "seconds",
+    "minutes": "minutes",
+    "hours": "hours",
+    "hoursMinutes": "{{hours}} hours {{minutes}} minutes"
   }
 }
