--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -34,11 +34,19 @@
     "lineHeight": "行高",
     "readingMode": "阅读模式",
     "exitReadingMode": "退出阅读模式",
+    "viewNote": "查看笔记",
+    "underline": "下划线",
+    "annotationAdded": "已添加{{type}}标注: \"{{text}}\"",
+    "noteCreatedSuccess": "笔记创建成功",
+    "noteCreatedWithText": "笔记创建成功: \"{{text}}\"",
+    "globalSettings": "全局设置",
     "firstTimeHint": {
       "title": "💡 使用提示",
       "fullscreen": "按 F11 进入全屏阅读模式",
       "aiExplain": "选中文字后可使用 AI 释义功能",
-      "gotIt": "知道了"
+      "gotIt": "知道了",
+      "fullscreenDesc": "享受沉浸式阅读体验",
+      "aiExplainDesc": "智能助手帮你理解难点"
     }
   },
   "notes": {
@@ -98,7 +106,20 @@
     "concept": "概念",
     "opinion": "观点",
     "question": "疑问",
-    "action": "行动"
+    "action": "行动",
+    "trashEmpty": "回收站为空",
+    "confirmRestore": "确定要恢复选中的 {{count}} 条笔记吗？",
+    "confirmBatchDelete": "确定要永久删除选中的 {{count}} 条笔记吗？此操作无法撤销。",
+    "restoreFailed": "恢复失败",
+    "batchRestoreFailed": "批量恢复失败",
+    "batchDeleteFailed": "批量删除失败",
+    "loadTrashFailed": "加载回收站失败",
+    "restoreNoteFailed": "恢复笔记失败",
+    "permanentDeleteFailed": "永久删除失败",
+    "selectedCount": "已选中 {{count}} 项",
+    "batchRestore": "批量恢复",
+    "batchDelete": "批量删除",
+    "deletedAt": "删除于"
   },
   "ai": {
     "title": "AI 助手",
@@ -118,7 +139,25 @@
     "selectTextPrompt": "请选中文字后点击 AI 释义按钮",
     "welcomeMessage": "你好！我是你的阅读助手。你可以问我关于当前章节的任何问题。",
     "explainError": "错误",
-    "chatError": "错误"
+    "chatError": "错误",
+    "explainFailed": "AI 释义失败",
+    "chatFailed": "AI 对话失败",
+    "openaiCn": "OpenAI (国内)",
+    "loadConfigFailed": "加载 AI 配置失败",
+    "loadConfigFailedAlert": "加载配置失败",
+    "apiKeyRequired": "请输入 API Key",
+    "apiKeyPlaceholder": "输入 API Key",
+    "saveConfigFailed": "保存配置失败",
+    "saving": "保存中...",
+    "configured": "已配置",
+    "notConfigured": "未配置",
+    "currentActive": "当前激活",
+    "configure": "配置",
+    "temperature": "温度",
+    "maxTokens": "最大 Token",
+    "activateConfig": "激活此配置",
+    "explainFailed": "AI 释义失败",
+    "explainFailedTitle": "释义失败"
   },
   "settings": {
     "title": "设置",
@@ -147,7 +186,32 @@
     "readingUnits": "阅读单元",
     "scores": "评分",
     "features": "特征",
-    "timeline": "时间线"
+    "timeline": "时间线",
+    "segmentDetail": "Segment 详情面板",
+    "decisionResult": "决策结果",
+    "merge": "合并",
+    "createNew": "创建新章节",
+    "fallbackStrategy": "Fallback 策略",
+    "scoreDetails": "评分明细",
+    "dimension": "维度",
+    "score": "分数",
+    "weight": "权重",
+    "weighted": "加权后",
+    "description": "说明",
+    "total": "TOTAL",
+    "tendToMerge": "倾向合并",
+    "tendToSplit": "倾向独立",
+    "decisionExplanation": "决策解释",
+    "contentType": "内容类型",
+    "loadDebugDataFailed": "加载 Debug 数据失败",
+    "loadFailed": "加载失败",
+    "ensureBookParsed": "请确保书籍已完成解析",
+    "mergedReason": "该 Segment 被合并的主要原因是：",
+    "splitReason": "该 Segment 被创建为新章节的主要原因是：",
+    "fallback": "Fallback",
+    "mergeLabel": "🟢 Merge",
+    "createNewLabel": "🔵 Create New",
+    "level": "Level"
   },
   "common": {
     "ok": "确定",
@@ -174,6 +238,30 @@
     "saveFailed": "保存失败",
     "deleteFailed": "删除失败",
     "networkError": "网络错误",
-    "unknownError": "发生未知错误"
+    "unknownError": "发生未知错误",
+    "importError": "导入错误"
+  },
+  "analytics": {
+    "title": "数据分析",
+    "totalNotes": "总笔记数",
+    "todayCreated": "今日创建",
+    "weekCreated": "本周创建",
+    "totalDuration": "总使用时长",
+    "categoryStats": "分类统计",
+    "noCategoryData": "暂无分类数据",
+    "uncategorized": "未分类",
+    "popularTags": "热门标签",
+    "noTagData": "暂无标签数据",
+    "averageStats": "平均统计",
+    "avgDailyCreated": "平均每日创建数",
+    "avgSessionDuration": "平均会话时长",
+    "to": "至",
+    "clearFilter": "清除筛选",
+    "noStatsData": "暂无统计数据",
+    "loadStatsFailed": "加载统计数据失败",
+    "seconds": "秒",
+    "minutes": "分钟",
+    "hours": "小时",
+    "hoursMinutes": "{{hours}}小时{{minutes}}分钟"
   }
 }
